add user module structure
